Fix layout issues

--- a/vanilla/docs/css/style.css
+++ b/vanilla/docs/css/style.css
@@ -43,7 +43,7 @@ ul {
 .anchor {
     display: block;
     position: relative;
-    top: -110px;
+    top: -130px;
 }
 
 .header {
